<resources>
    <string name="app_name">CodeReader</string>
    <string name="tb_programme">TB Programme</string>
    <string name="child_programme">Child Programme</string>
    <string name="unique_id">Unique ID</string>
    <string name="read_data">Read Data</string>
    <string name="main_info">Click on \"Scan Code\" to get the patient information  </string>
    <string name="data_activity">Data Activity</string>
    <string name="info">Info</string>
    <string name="patient_information">Patient Information</string>
    <string name="tb">TB</string>
    <string name="art">ART</string>
    <string name="child_program">Child Programme</string>
    <string name="new_scan">Scan a new patient</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="tb_identifier">TB identifier</string>
    <string name="sex">Sex</string>
    <string name="state">State</string>
    <string name="dob">D.o.b</string>
    <string name="unique_ID">Unique ID</string>
    <string name="tb_program">TB Program</string>
    <string name="todo">TODO</string>
    <string name="enrollment_date">Date of enrollment</string>
    <string name="gender">Gender</string>
    <string name="tb_checked">TB Checked?</string>
    <string name="add_new_pat">Add a new patient</string>
    <string name="add">Add</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="def">default</string>
    <string name="printCode">Print Code</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="scan_code">Scan code</string>
    <string name="village">Village</string>
    <string name="phys_add">Physical address</string>
    <string name="new_booklet">New Booklet</string>
    <string name="lost_booklet">Lost Booklet</string>
    <string name="info_new_booklet">Info</string>
    <string name="f_a_p">Find a patient</string>
    <string name="search">Search</string>
</resources>
